this commit adds paragraphs to notes.html

--- a/notes.html
+++ b/notes.html
@@ -5,13 +5,12 @@ Markups tell you what to do with the element...
 <em> Adrian sucks at Apex </em>
 
 
-Did you know?Spaces, tabs, and line breaks are called
-<strong>whitespace</strong>
+<p>Did you know?Spaces, tabs, and line breaks are called</p>
 
-Did you
+<p>Did you
 know?
   Spaces,
   Tabs,
 and line
 breaks    are    called
-    <strong>whitespace</strong>
+    <strong>whitespace</strong> </p>
