This commit creates a redbox in bluebox.html

--- a/bluebox.html
+++ b/bluebox.html
@@ -8,6 +8,13 @@
     height: 100px;
   }
 
+  .redbox {
+    border: 10px solid red;
+    margin: 1em;
+    width: 30px;
+    height: 30px;
+  }
 </style>
 
 <div class="bluebox"> Hooray, a box!</div>
+<div class="redbox"></div>
