--- a/bluebox.html
+++ b/bluebox.html
@@ -6,15 +6,24 @@
     padding: 0.5em;
     width: 150px;
     height: 100px;
+    float: right;
   }
 
   .redbox {
     border: 10px solid red;
     margin: 1em;
     width: 30px;
-    height: 30px;
+    height: 30px
+    float: right;
   }
 </style>
 
 <div class="bluebox"> Hooray, a box!</div>
 <div class="redbox"></div>
+<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tmepor incididunt ut</p>
+
+
+<!--<div class="bluebox">
+  <div class="redbox">
+  </div>
+</div>-->
