--- a/page_structure.html
+++ b/page_structure.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>My HTML Notes</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <h1>Welcome to My HTML Notes</h1>
